k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typing-game-backend
spec:
  type: ClusterIP
  selector:
    app: typing-game-backend
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
